Changes for new data

--- a/notebooks/sample_plate_report.ipynb
+++ b/notebooks/sample_plate_report.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Get-Well-Data-from-the-Database\" data-toc-modified-id=\"Get-Well-Data-from-the-Database-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Get Well Data from the Database</a></span></li><li><span><a href=\"#Get-a-List-of-Plates\" data-toc-modified-id=\"Get-a-List-of-Plates-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Get a List of Plates</a></span></li><li><span><a href=\"#Get-Wells-for-Each-Plate\" data-toc-modified-id=\"Get-Wells-for-Each-Plate-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Get Wells for Each Plate</a></span></li><li><span><a href=\"#Get-Samples-Missing-from-the-Taxonomy\" data-toc-modified-id=\"Get-Samples-Missing-from-the-Taxonomy-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Get Samples Missing from the Taxonomy</a></span></li><li><span><a href=\"#Get-Family-and-Genus-Coverage\" data-toc-modified-id=\"Get-Family-and-Genus-Coverage-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Get Family and Genus Coverage</a></span></li><li><span><a href=\"#Generate-Report\" data-toc-modified-id=\"Generate-Report-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Generate Report</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -37,7 +54,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Get Well Data from the Database"
+   ]
   },
   {
    "cell_type": "code",
@@ -45,29 +64,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_report(cxn):\n",
-    "    \"\"\"Generate the report.\"\"\"\n",
-    "    env = Environment(loader=FileSystemLoader(TEMPLATE_DIR))\n",
-    "    template = env.get_template(REPORT_TEMPLATE)\n",
-    "\n",
-    "    wells = get_wells(cxn)\n",
-    "    samples = pd.read_sql('SELECT * FROM samples', cxn)\n",
-    "\n",
-    "    report = template.render(\n",
-    "        now=NOW,\n",
-    "        wells=get_plate_wells(wells),\n",
-    "        plates=get_plates(wells).to_dict(orient='records'),\n",
-    "        genera=get_genus_coverage(cxn, samples).to_dict(orient='records'),\n",
-    "        missing=get_missing(cxn, wells, samples).to_dict(orient='records'))\n",
-    "\n",
-    "    with open(REPORT_PATH, 'w') as out_file:\n",
-    "        out_file.write(report)"
+    "def get_wells(cxn):\n",
+    "    sql = \"\"\"\n",
+    "        SELECT wells.*, picogreen_id, scientific_name, ng_microliter_mean\n",
+    "          FROM wells\n",
+    "          JOIN taxon_ids ON (wells.sample_id = taxon_ids.id)\n",
+    "     LEFT JOIN picogreen USING (sample_id)\n",
+    "        ORDER BY local_no, row, col\n",
+    "    \"\"\"\n",
+    "    wells = pd.read_sql(sql, cxn)\n",
+    "    return wells"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Get a List of Plates"
+   ]
   },
   {
    "cell_type": "code",
@@ -85,7 +99,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Get Wells for Each Plate"
+   ]
   },
   {
    "cell_type": "code",
@@ -94,9 +110,8 @@
    "outputs": [],
    "source": [
     "def get_plate_wells(wells):\n",
-    "    \"\"\"Get the plate well data for the report.\"\"\"\n",
     "    plate_wells = {}\n",
-    "    for group, plate in wells.groupby('group'):\n",
+    "    for group, plate in wells.groupby('local_no'):\n",
     "        plate_id = plate['plate_id'].iloc[0]\n",
     "        plate_wells[plate_id] = plate.fillna('').to_dict(orient='records')\n",
     "    return plate_wells"
@@ -105,7 +120,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Get Samples Missing from the Taxonomy"
+   ]
   },
   {
    "cell_type": "code",
@@ -113,17 +130,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_wells(cxn):\n",
-    "    wells = pd.read_sql('SELECT * FROM plates', cxn)\n",
-    "    wells['group'] = wells.local_id.str.replace(r'\\D+', '').astype('int')\n",
-    "    wells.sort_values(['group', 'row', 'col'], inplace=True)\n",
-    "    return wells"
+    "def get_missing(cxn, wells):\n",
+    "    taxon_ids = pd.read_sql('SELECT * FROM taxon_ids', cxn)\n",
+    "    in_ids = wells.sample_id.isin(taxon_ids.id)\n",
+    "    missing = wells[~in_ids]\n",
+    "    return missing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Get Family and Genus Coverage"
+   ]
   },
   {
    "cell_type": "code",
@@ -131,18 +150,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_missing(cxn, wells, samples):\n",
-    "    \"\"\"Get the plate samples that are not in the master taxonomy.\"\"\"\n",
-    "    in_samples = wells.sample_id.isin(samples.sample_id)\n",
-    "    is_uuid = wells.sample_id.map(util.split_uuids)\n",
-    "    missing = wells[~in_samples & is_uuid]\n",
-    "    return missing"
+    "def get_genus_coverage(cxn):\n",
+    "    taxonomy = pd.read_sql('SELECT * FROM taxonomy', cxn)\n",
+    "    taxonomy.rename(\n",
+    "        columns={'scientific_name': 'total', 'file_names': 'imaged'},\n",
+    "        inplace=True)\n",
+    "    taxonomy = taxonomy[['family', 'genus', 'total', 'imaged']]\n",
+    "\n",
+    "    genera = taxonomy.groupby(['family', 'genus']).count()\n",
+    "\n",
+    "    taxonomy['genus'] = ''\n",
+    "    families = taxonomy.groupby(['family', 'genus']).count()\n",
+    "\n",
+    "    taxonomy['family'] = '~Total~'\n",
+    "    total = taxonomy.groupby(['family', 'genus']).count()\n",
+    "\n",
+    "    coverage = pd.concat([families, genera, total])\n",
+    "    coverage['family'] = coverage.index.get_level_values('family')\n",
+    "    coverage['genus'] = coverage.index.get_level_values('genus')\n",
+    "    coverage['percent'] = coverage['imaged'] / coverage['total'] * 100.0\n",
+    "\n",
+    "    coverage.sort_values(['family', 'genus'], inplace=True)\n",
+    "    return coverage"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Generate Report"
+   ]
   },
   {
    "cell_type": "code",
@@ -150,44 +187,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_genus_coverage(cxn, samples):\n",
-    "    taxons = pd.read_sql(\n",
-    "        'SELECT family, genus, scientific_name FROM taxons', cxn)\n",
-    "    images = pd.read_sql('SELECT * FROM images', cxn)\n",
+    "def print_report(cxn):\n",
+    "    env = Environment(loader=FileSystemLoader(TEMPLATE_DIR))\n",
+    "    template = env.get_template(REPORT_TEMPLATE)\n",
     "\n",
-    "    taxons['total'] = 1\n",
-    "    taxons['imaged'] = 0\n",
+    "    wells = get_wells(cxn)\n",
     "\n",
-    "    sample_has_image = samples.sample_id.isin(images.sample_id)\n",
-    "    sampled_image = samples[sample_has_image]\n",
+    "    report = template.render(\n",
+    "        now=NOW,\n",
+    "        wells=get_plate_wells(wells),\n",
+    "        plates=get_plates(wells).to_dict(orient='records'),\n",
+    "        genera=get_genus_coverage(cxn).to_dict(orient='records'),\n",
+    "        missing=get_missing(cxn, wells).to_dict(orient='records'))\n",
     "\n",
-    "    is_imaged = taxons.scientific_name.isin(sampled_image.scientific_name)\n",
-    "    taxons.loc[is_imaged, 'imaged'] = 1\n",
-    "\n",
-    "    aggs = {'total': sum, 'imaged': sum}\n",
-    "\n",
-    "    families = taxons.groupby('family').agg(aggs)\n",
-    "    families['genus'] = ''\n",
-    "    families['family'] = families.index\n",
-    "\n",
-    "    genera = taxons.groupby(['family', 'genus']).agg(aggs)\n",
-    "    genera['family'] = genera.index.get_level_values('family')\n",
-    "    genera['genus'] = genera.index.get_level_values('genus')\n",
-    "\n",
-    "    coverage = pd.concat([families, genera])\n",
-    "    total = pd.DataFrame([{\n",
-    "        'family': '~Total~',\n",
-    "        'genus': '',\n",
-    "        'imaged': taxons.imaged.sum(),\n",
-    "        'total': taxons.total.sum()}])\n",
-    "    coverage = coverage.append(total)\n",
-    "\n",
-    "    coverage.sort_values(['family', 'genus'], inplace=True)\n",
-    "    coverage.index = range(len(coverage))\n",
-    "    has_genus = coverage.genus != ''\n",
-    "    coverage.loc[has_genus, 'family'] = ''\n",
-    "    coverage['percent'] = coverage['imaged'] / coverage['total'] * 100.0\n",
-    "    return coverage"
+    "    with open(REPORT_PATH, 'w') as out_file:\n",
+    "        out_file.write(report)"
    ]
   },
   {
@@ -232,7 +246,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
