Fix missing pilot data images

--- a/notebooks/misc_utilities.ipynb
+++ b/notebooks/misc_utilities.ipynb
@@ -7,21 +7,353 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Miscellaneous-Functions-and-One-Off-Utilities\" data-toc-modified-id=\"Miscellaneous-Functions-and-One-Off-Utilities-1\">Miscellaneous Functions and One-Off Utilities</a></span><ul class=\"toc-item\"><li><span><a href=\"#Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy\" data-toc-modified-id=\"Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy-1.1\">Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy</a></span></li><li><span><a href=\"#Assign-UUIDs-to-UFIB-(Pilot-Study)-Images\" data-toc-modified-id=\"Assign-UUIDs-to-UFIB-(Pilot-Study)-Images-1.2\">Assign UUIDs to UFIB (Pilot Study) Images</a></span></li></ul></li><li><span><a href=\"#Picogreen-Yields\" data-toc-modified-id=\"Picogreen-Yields-2\">Picogreen Yields</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Get-Numbers-of-Families-per-Plate\" data-toc-modified-id=\"Get-Numbers-of-Families-per-Plate-1\">Get Numbers of Families per Plate</a></span></li><li><span><a href=\"#Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy\" data-toc-modified-id=\"Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy-2\">Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy</a></span></li><li><span><a href=\"#Assign-UUIDs-to-UFIB-(Pilot-Study)-Images\" data-toc-modified-id=\"Assign-UUIDs-to-UFIB-(Pilot-Study)-Images-3\">Assign UUIDs to UFIB (Pilot Study) Images</a></span></li><li><span><a href=\"#Picogreen-Yields\" data-toc-modified-id=\"Picogreen-Yields-4\">Picogreen Yields</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Miscellaneous Functions and One-Off Utilities"
+    "# Get Numbers of Families per Plate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import lib.db as db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CXN = db.connect()\n",
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>local_id</th>\n",
+       "      <th>families</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Local identifier:NITFIX_29</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Local identifier: NITFIX_38</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Local identifier:NITFIX_3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Local identifier: NITFIX_6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Local identifier: NITFIX_10</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      local_id  families\n",
+       "0   Local identifier:NITFIX_29        11\n",
+       "1  Local identifier: NITFIX_38        11\n",
+       "2    Local identifier:NITFIX_3         8\n",
+       "3   Local identifier: NITFIX_6         8\n",
+       "4  Local identifier: NITFIX_10         8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "select local_id, count(distinct family) as families\n",
+    "  from wells\n",
+    "  join taxon_ids on (wells.sample_id = taxon_ids.id)\n",
+    "  join taxonomy using (scientific_name)\n",
+    " group by local_id\n",
+    " order by families desc, local_no\n",
+    "\"\"\"\n",
+    "totals = pd.read_sql(sql, CXN)\n",
+    "totals.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>local_id</th>\n",
+       "      <th>local_no</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Local identifier:NITFIX_3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Begoniaceae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Local identifier:NITFIX_3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Cucurbitaceae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Local identifier:NITFIX_3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Fagaceae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Local identifier:NITFIX_3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Leguminosae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Local identifier:NITFIX_3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Moraceae</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    local_id  local_no         family\n",
+       "0  Local identifier:NITFIX_3         3    Begoniaceae\n",
+       "1  Local identifier:NITFIX_3         3  Cucurbitaceae\n",
+       "2  Local identifier:NITFIX_3         3       Fagaceae\n",
+       "3  Local identifier:NITFIX_3         3    Leguminosae\n",
+       "4  Local identifier:NITFIX_3         3       Moraceae"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "select distinct local_id, local_no, family\n",
+    "  from wells\n",
+    "  join taxon_ids ON (wells.sample_id = taxon_ids.id)\n",
+    "  join taxonomy using (scientific_name)\n",
+    " order by local_no, family\n",
+    "\"\"\"\n",
+    "families = pd.read_sql(sql, CXN)\n",
+    "families.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(38,\n",
+       " ['Cannabaceae',\n",
+       "  'Coriariaceae',\n",
+       "  'Cucurbitaceae',\n",
+       "  'Fagaceae',\n",
+       "  'Leguminosae',\n",
+       "  'Nothofagaceae',\n",
+       "  'Polygalaceae',\n",
+       "  'Rhamnaceae',\n",
+       "  'Rosaceae',\n",
+       "  'Ulmaceae',\n",
+       "  'Urticaceae'])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "report = {}\n",
+    "for _, family in families.iterrows():\n",
+    "    fams = report.get(family.local_no, [])\n",
+    "    fams.append(family.family)\n",
+    "    report[family.local_no] = fams\n",
+    "\n",
+    "report = [(lid, fam) for lid, fam in report.items()]\n",
+    "\n",
+    "report = sorted(report, key=lambda x: (len(x[1]), x[0]), reverse=True)\n",
+    "report[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Plate</td>\n",
+       "      <td>Count</td>\n",
+       "      <td>Families</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Cannabaceae, Coriariaceae, Cucurbitaceae, Faga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Begoniaceae, Betulaceae, Cannabaceae, Cucurbit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Begoniaceae, Betulaceae, Cucurbitaceae, Elaeag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Begoniaceae, Betulaceae, Cucurbitaceae, Fagace...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0      1                                                  2\n",
+       "0  Plate  Count                                           Families\n",
+       "1     38     11  Cannabaceae, Coriariaceae, Cucurbitaceae, Faga...\n",
+       "2     29     11  Begoniaceae, Betulaceae, Cannabaceae, Cucurbit...\n",
+       "3     27      8  Begoniaceae, Betulaceae, Cucurbitaceae, Elaeag...\n",
+       "4     10      8  Begoniaceae, Betulaceae, Cucurbitaceae, Fagace..."
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [['Plate', 'Count', 'Families']]\n",
+    "for ln in report:\n",
+    "    data.append([ln[0], len(ln[1]), ', '.join(ln[1])])\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df.to_csv(INTERIM_DATA / 'families_per_plate.csv', index=False)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy\n",
+    "# Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy\n",
     "\n",
     "** Note: Run this after ingesting the worksheets **"
    ]
@@ -225,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assign UUIDs to UFIB (Pilot Study) Images"
+    "# Assign UUIDs to UFIB (Pilot Study) Images"
    ]
   },
   {
