--- a/notebooks/04_sample_plate_report.ipynb
+++ b/notebooks/04_sample_plate_report.ipynb
@@ -153,7 +153,7 @@
     "def get_genus_coverage(cxn):\n",
     "    taxonomy = pd.read_sql('SELECT * FROM taxonomy', cxn)\n",
     "    taxonomy.rename(\n",
-    "        columns={'scientific_name': 'total', 'file_names': 'imaged'},\n",
+    "        columns={'scientific_name': 'total', 'image_files': 'imaged'},\n",
     "        inplace=True)\n",
     "    taxonomy = taxonomy[['family', 'genus', 'total', 'imaged']]\n",
     "\n",
