--- a/notebooks/04_sample_plate_report.ipynb
+++ b/notebooks/04_sample_plate_report.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Get-Well-Data-from-the-Database\" data-toc-modified-id=\"Get-Well-Data-from-the-Database-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Get Well Data from the Database</a></span></li><li><span><a href=\"#Get-a-List-of-Plates\" data-toc-modified-id=\"Get-a-List-of-Plates-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Get a List of Plates</a></span></li><li><span><a href=\"#Get-Wells-for-Each-Plate\" data-toc-modified-id=\"Get-Wells-for-Each-Plate-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Get Wells for Each Plate</a></span></li><li><span><a href=\"#Get-Samples-Missing-from-the-Taxonomy\" data-toc-modified-id=\"Get-Samples-Missing-from-the-Taxonomy-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Get Samples Missing from the Taxonomy</a></span></li><li><span><a href=\"#Get-Family-and-Genus-Coverage\" data-toc-modified-id=\"Get-Family-and-Genus-Coverage-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Get Family and Genus Coverage</a></span></li><li><span><a href=\"#Generate-Report\" data-toc-modified-id=\"Generate-Report-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Generate Report</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Get-Well-Data-from-the-Database\" data-toc-modified-id=\"Get-Well-Data-from-the-Database-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Get Well Data from the Database</a></span></li><li><span><a href=\"#Get-a-List-of-Plates\" data-toc-modified-id=\"Get-a-List-of-Plates-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Get a List of Plates</a></span></li><li><span><a href=\"#Get-Wells-for-Each-Plate\" data-toc-modified-id=\"Get-Wells-for-Each-Plate-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Get Wells for Each Plate</a></span></li><li><span><a href=\"#Get-Family-and-Genus-Coverage\" data-toc-modified-id=\"Get-Family-and-Genus-Coverage-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Get Family and Genus Coverage</a></span></li><li><span><a href=\"#Generate-Report\" data-toc-modified-id=\"Generate-Report-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Generate Report</a></span></li></ul></div>"
    ]
   },
   {
@@ -66,9 +66,11 @@
    "source": [
     "def get_wells(cxn):\n",
     "    sql = \"\"\"\n",
-    "        SELECT wells.*, picogreen_id, scientific_name, ng_microliter_mean\n",
+    "        SELECT wells.*, picogreen_id, scientific_name,\n",
+    "               ng_microliter_mean, family\n",
     "          FROM wells\n",
     "          JOIN taxon_ids ON (wells.sample_id = taxon_ids.id)\n",
+    "          JOIN taxonomy USING (scientific_name)\n",
     "     LEFT JOIN picogreen USING (sample_id)\n",
     "        ORDER BY local_no, row, col\n",
     "    \"\"\"\n",
@@ -121,32 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get Samples Missing from the Taxonomy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_missing(cxn, wells):\n",
-    "    taxon_ids = pd.read_sql('SELECT * FROM taxon_ids', cxn)\n",
-    "    in_ids = wells.sample_id.isin(taxon_ids.id)\n",
-    "    missing = wells[~in_ids]\n",
-    "    return missing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Get Family and Genus Coverage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +179,7 @@
     "        now=NOW,\n",
     "        wells=get_plate_wells(wells),\n",
     "        plates=get_plates(wells).to_dict(orient='records'),\n",
-    "        genera=get_genus_coverage(cxn).to_dict(orient='records'),\n",
-    "        missing=get_missing(cxn, wells).to_dict(orient='records'))\n",
+    "        genera=get_genus_coverage(cxn).to_dict(orient='records'))\n",
     "\n",
     "    with open(REPORT_PATH, 'w') as out_file:\n",
     "        out_file.write(report)"
@@ -206,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
