--- a/notebooks/misc_utilities.ipynb
+++ b/notebooks/misc_utilities.ipynb
@@ -7,7 +7,196 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Get-Numbers-of-Families-per-Plate\" data-toc-modified-id=\"Get-Numbers-of-Families-per-Plate-1\">Get Numbers of Families per Plate</a></span></li><li><span><a href=\"#Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy\" data-toc-modified-id=\"Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy-2\">Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy</a></span></li><li><span><a href=\"#Assign-UUIDs-to-UFIB-(Pilot-Study)-Images\" data-toc-modified-id=\"Assign-UUIDs-to-UFIB-(Pilot-Study)-Images-3\">Assign UUIDs to UFIB (Pilot Study) Images</a></span></li><li><span><a href=\"#Picogreen-Yields\" data-toc-modified-id=\"Picogreen-Yields-4\">Picogreen Yields</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Add-Families-to-Picogreen-Results\" data-toc-modified-id=\"Add-Families-to-Picogreen-Results-1\">Add Families to Picogreen Results</a></span></li><li><span><a href=\"#Assign-UUIDs-to-Corrales-Samples\" data-toc-modified-id=\"Assign-UUIDs-to-Corrales-Samples-2\">Assign UUIDs to Corrales Samples</a></span></li><li><span><a href=\"#Get-Numbers-of-Families-per-Plate\" data-toc-modified-id=\"Get-Numbers-of-Families-per-Plate-3\">Get Numbers of Families per Plate</a></span></li><li><span><a href=\"#Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy\" data-toc-modified-id=\"Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy-4\">Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy</a></span></li><li><span><a href=\"#Assign-UUIDs-to-UFIB-(Pilot-Study)-Images\" data-toc-modified-id=\"Assign-UUIDs-to-UFIB-(Pilot-Study)-Images-5\">Assign UUIDs to UFIB (Pilot Study) Images</a></span></li><li><span><a href=\"#Picogreen-Yields\" data-toc-modified-id=\"Picogreen-Yields-6\">Picogreen Yields</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add Families to Picogreen Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import lib.db as db\n",
+    "import lib.google as google"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CXN = db.connect()\n",
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'picogreen_results'\n",
+    "google.sheet_to_excel(name, INTERIM_DATA / f'{name}.xls')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assign UUIDs to Corrales Samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import lib.db as db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CXN = db.connect()\n",
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>corrales_id</th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>image_file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Corrales: Corrales 770</td>\n",
+       "      <td>eb9dc632-82a9-479f-88d5-f172ee6cc2d7</td>\n",
+       "      <td>../data/raw/missing_photos/Corrales_770.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Corrales: Corrales 830</td>\n",
+       "      <td>4a31b17c-08f2-4236-a7b1-2261554ea658</td>\n",
+       "      <td>../data/raw/missing_photos/Corrales_830.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Corrales: Corrales 792</td>\n",
+       "      <td>3ffa0f4c-1180-4268-8ba5-c9cc2e251350</td>\n",
+       "      <td>../data/raw/missing_photos/Corrales_792.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Corrales: Corrales 704</td>\n",
+       "      <td>b6b6b66e-3b3b-4d5c-8197-a959a8fe715e</td>\n",
+       "      <td>../data/raw/missing_photos/Corrales_704.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Corrales: Corrales 754</td>\n",
+       "      <td>56013e5d-6b1b-4c1c-8f01-3bb7e57c3a83</td>\n",
+       "      <td>../data/raw/missing_photos/Corrales_754.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              corrales_id                             sample_id  \\\n",
+       "0  Corrales: Corrales 770  eb9dc632-82a9-479f-88d5-f172ee6cc2d7   \n",
+       "1  Corrales: Corrales 830  4a31b17c-08f2-4236-a7b1-2261554ea658   \n",
+       "2  Corrales: Corrales 792  3ffa0f4c-1180-4268-8ba5-c9cc2e251350   \n",
+       "3  Corrales: Corrales 704  b6b6b66e-3b3b-4d5c-8197-a959a8fe715e   \n",
+       "4  Corrales: Corrales 754  56013e5d-6b1b-4c1c-8f01-3bb7e57c3a83   \n",
+       "\n",
+       "                                    image_file  \n",
+       "0  ../data/raw/missing_photos/Corrales_770.jpg  \n",
+       "1  ../data/raw/missing_photos/Corrales_830.jpg  \n",
+       "2  ../data/raw/missing_photos/Corrales_792.jpg  \n",
+       "3  ../data/raw/missing_photos/Corrales_704.jpg  \n",
+       "4  ../data/raw/missing_photos/Corrales_754.jpg  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corrales = \"\"\"\n",
+    "    SELECT id FROM taxon_ids\n",
+    "     WHERE id LIKE '%Corrales%'\n",
+    "        OR id LIKE '%corrales%'\n",
+    "    \"\"\"\n",
+    "corrales = pd.read_sql(sql, CXN)\n",
+    "corrales['sample_id'] = corrales.id.map(lambda x: uuid.uuid4())\n",
+    "\n",
+    "corrales['image_file'] = corrales.id.str.split(r':\\s*').str[1]\n",
+    "corrales.image_file = corrales.image_file.str.replace(' ', '_')\n",
+    "corrales.image_file = corrales.image_file.apply(\n",
+    "    lambda x: f'../data/raw/missing_photos/{x}.jpg')\n",
+    "\n",
+    "corrales.rename(columns={'id': 'corrales_id'}, inplace=True)\n",
+    "\n",
+    "corrales.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CORRALES_OUT = INTERIM_DATA / 'corrales.csv'\n",
+    "# corrales.to_csv(CORRALES_OUT, index=False)"
    ]
   },
   {
@@ -673,7 +862,7 @@
    "source": [
     "pilot = pd.read_csv(PILOT_IN)\n",
     "pilot['sample_id'] = np.NaN\n",
-    "pilot.sample_id = pilot.sample_id.map(lambda x: uuid.uuid4())\n",
+    "pilot.sample_id = pilot.File.map(lambda x: uuid.uuid4())\n",
     "pilot.head()"
    ]
   },
