Added family filter to sample plate report

--- a/notebooks/01_ingest_images.ipynb
+++ b/notebooks/01_ingest_images.ipynb
@@ -348,7 +348,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1236/1236 [00:00<00:00, 594513.73it/s]\n"
+      "100%|██████████| 1236/1236 [00:00<00:00, 566141.72it/s]\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 483/483 [00:00<00:00, 555179.18it/s]\n"
+      "100%|██████████| 483/483 [00:00<00:00, 502941.62it/s]\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 688/688 [00:00<00:00, 570856.81it/s]\n"
+      "100%|██████████| 688/688 [00:00<00:00, 571988.34it/s]\n"
      ]
     }
    ],
@@ -443,7 +443,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2596/2596 [00:00<00:00, 597443.80it/s]\n"
+      "100%|██████████| 2596/2596 [00:00<00:00, 599978.69it/s]\n"
      ]
     }
    ],
@@ -472,7 +472,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1027/1027 [00:00<00:00, 589994.55it/s]\n"
+      "100%|██████████| 1027/1027 [00:00<00:00, 421070.40it/s]\n"
      ]
     }
    ],
@@ -506,7 +506,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1307/1307 [00:00<00:00, 534095.41it/s]\n"
+      "100%|██████████| 1307/1307 [00:00<00:00, 530837.16it/s]\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1112/1112 [00:00<00:00, 562885.11it/s]\n"
+      "100%|██████████| 1112/1112 [00:00<00:00, 580396.47it/s]\n"
      ]
     }
    ],
@@ -647,7 +647,7 @@
     "csv_name = 'pilot.csv'\n",
     "csv_path = INTERIM_DATA / csv_name\n",
     "\n",
-    "google.sheet_to_csv('UFBI_identifiers_photos', csv_out)\n",
+    "google.sheet_to_csv('UFBI_identifiers_photos', csv_path)\n",
     "\n",
     "pilot = pd.read_csv(csv_path)\n",
     "\n",
@@ -777,7 +777,7 @@
     "csv_name = 'pilot.csv'\n",
     "csv_path = INTERIM_DATA / csv_name\n",
     "\n",
-    "google.sheet_to_csv('corrales_data', csv_out)\n",
+    "google.sheet_to_csv('corrales_data', csv_path)\n",
     "\n",
     "corrales = pd.read_csv(csv_path)\n",
     "corrales.corrales_id = corrales.corrales_id.str.lower()\n",
