--- a/notebooks/02_ingest_taxonomy.ipynb
+++ b/notebooks/02_ingest_taxonomy.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "csv_path = INTERIM_DATA / 'taxonomy.csv'\n",
     "\n",
-    "google.sheet_to_csv('NitFixMasterTaxonomy', csv_out)\n",
+    "google.sheet_to_csv('NitFixMasterTaxonomy', csv_path)\n",
     "\n",
     "taxonomy = pd.read_csv(\n",
     "    csv_path,\n",
@@ -1470,7 +1470,7 @@
    "source": [
     "csv_path = INTERIM_DATA / 'loci.csv'\n",
     "\n",
-    "google.sheet_to_csv('genbank_loci', csv_out)\n",
+    "google.sheet_to_csv('genbank_loci', csv_path)\n",
     "\n",
     "loci = pd.read_csv(\n",
     "    csv_path,\n",
@@ -1984,7 +1984,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f8e7e04e1f0>"
+       "<sqlite3.Cursor at 0x7f3491c4f1f0>"
       ]
      },
      "execution_count": 20,
@@ -2007,7 +2007,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f8e7e04e650>"
+       "<sqlite3.Cursor at 0x7f3491c4f650>"
       ]
      },
      "execution_count": 21,
