--- a/notebooks/03_ingest_samples.ipynb
+++ b/notebooks/03_ingest_samples.ipynb
@@ -230,7 +230,7 @@
     "csv_path = INTERIM_DATA / csv_name\n",
     "step = 14\n",
     "\n",
-    "google.sheet_to_csv('sample_plates', csv_out)\n",
+    "google.sheet_to_csv('sample_plates', csv_path)\n",
     "\n",
     "sample_plates = pd.read_csv(csv_path)\n",
     "\n",
@@ -410,7 +410,7 @@
    "source": [
     "csv_path = INTERIM_DATA / 'picogreen.csv'\n",
     "\n",
-    "google.sheet_to_csv('picogreen_results', csv_out)\n",
+    "google.sheet_to_csv('picogreen_results', csv_path)\n",
     "\n",
     "picogreen = pd.read_csv(\n",
     "    csv_path,\n",
