--- a/notebooks/03_ingest_samples.ipynb
+++ b/notebooks/03_ingest_samples.ipynb
@@ -107,6 +107,7 @@
        "      <th>well_no</th>\n",
        "      <th>local_no</th>\n",
        "      <th>well</th>\n",
+       "      <th>picogreen_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -124,6 +125,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>A01</td>\n",
+       "      <td>1_01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -139,6 +141,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>A01</td>\n",
+       "      <td>2_01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -154,6 +157,7 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>A01</td>\n",
+       "      <td>3_01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -169,6 +173,7 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>A01</td>\n",
+       "      <td>4_01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -184,6 +189,7 @@
        "      <td>1</td>\n",
        "      <td>5</td>\n",
        "      <td>A01</td>\n",
+       "      <td>5_01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -211,12 +217,19 @@
        "3             Notes:Contamination, Samples Discarded   Quantification NA   \n",
        "4                                Notes: OSU SAMPLES.  Quantification 3/5   \n",
        "\n",
-       "                              sample_id row  col  well_no  local_no well  \n",
-       "0                                     x   A    1        1         1  A01  \n",
-       "1                                     x   A    1        1         2  A01  \n",
-       "2  ade73b3b-79de-407d-b9d2-6c4f850309bc   A    1        1         3  A01  \n",
-       "3                                     x   A    1        1         4  A01  \n",
-       "4  b5bc9a61-1be8-4d9c-9722-6ebe5fa0f244   A    1        1         5  A01  "
+       "                              sample_id row  col  well_no  local_no well  \\\n",
+       "0                                     x   A    1        1         1  A01   \n",
+       "1                                     x   A    1        1         2  A01   \n",
+       "2  ade73b3b-79de-407d-b9d2-6c4f850309bc   A    1        1         3  A01   \n",
+       "3                                     x   A    1        1         4  A01   \n",
+       "4  b5bc9a61-1be8-4d9c-9722-6ebe5fa0f244   A    1        1         5  A01   \n",
+       "\n",
+       "  picogreen_id  \n",
+       "0         1_01  \n",
+       "1         2_01  \n",
+       "2         3_01  \n",
+       "3         4_01  \n",
+       "4         5_01  "
       ]
      },
      "execution_count": 3,
@@ -277,8 +290,9 @@
     "wells['well_no'] = wells.apply(\n",
     "    lambda well: 'ABCDEFGH'.find(well.row.upper()) * 12 + well.col, axis=1)\n",
     "wells['local_no'] = wells.local_id.str.replace(r'\\D+', '').astype('int')\n",
-    "wells['well'] = wells.apply(\n",
-    "    lambda well: well.row + f'{well.col:02d}', axis=1)\n",
+    "wells['well'] = wells.apply(lambda w: f'{w.row}{w.col:02d}', axis=1)\n",
+    "wells['picogreen_id'] = wells.apply(\n",
+    "    lambda w: f'{w.local_no}_{w.well_no:02d}', axis=1)\n",
     "\n",
     "wells.head()"
    ]
