--- a/notebooks/04_sample_plate_report.ipynb
+++ b/notebooks/04_sample_plate_report.ipynb
@@ -66,12 +66,11 @@
    "source": [
     "def get_wells(cxn):\n",
     "    sql = \"\"\"\n",
-    "        SELECT wells.*, picogreen_id, scientific_name,\n",
-    "               ng_microliter_mean, family\n",
+    "        SELECT wells.*, scientific_name, ng_microliter_mean, family\n",
     "          FROM wells\n",
     "          JOIN taxon_ids ON (wells.sample_id = taxon_ids.id)\n",
     "          JOIN taxonomy USING (scientific_name)\n",
-    "     LEFT JOIN picogreen USING (sample_id)\n",
+    "     LEFT JOIN picogreen USING (picogreen_id)\n",
     "        ORDER BY local_no, row, col\n",
     "    \"\"\"\n",
     "    wells = pd.read_sql(sql, cxn)\n",
